tests/snapshots/test_nom_from_file__mosek_bounds.snap
---
source: tests/test_nom_from_file.rs
expression: parsed
---
name: " Created by MOSEK version 8.0.0.94"
sense: Minimize
objectives:
  system_cost:
    name: system_cost
    coefficients:
      - var_name: Gen_001d01h01
        coefficient: 0.2
      - var_name: Gen_001d01h02
        coefficient: 0.2
      - var_name: Gen_001d01h03
        coefficient: 0.2
      - var_name: Gen_001d01h04
        coefficient: 0.2
      - var_name: Gen_001d01h05
        coefficient: 0.2
      - var_name: Gen_001d01h06
        coefficient: 0.2
      - var_name: Gen_001d01h07
        coefficient: 0.2
      - var_name: Gen_001d01h08
        coefficient: 0.2
      - var_name: Gen_001d01h09
        coefficient: 0.2
      - var_name: Gen_001d01h10
        coefficient: 0.2
      - var_name: Gen_001d01h11
        coefficient: 0.2
constraints:
  dummy_constraint:
    type: Standard
    name: dummy_constraint
    coefficients:
      - var_name: Gen_001d01h01
        coefficient: 1
      - var_name: Gen_001d01h02
        coefficient: 1
      - var_name: "SO_GB.XYZ's.Dan.(1)"
        coefficient: 59.983048643
      - var_name: STU_7_AL.rsuT.Wat.Job.(1)
        coefficient: -0.2
    operator: LTE
    rhs: 1000
variables:
  EF_0_E_Hub_Albania_Demand_Albania:
    name: EF_0_E_Hub_Albania_Demand_Albania
    var_type:
      LowerBound: -999999999.9
  EF_1_E_Hub_Albania_Demand_Albania:
    name: EF_1_E_Hub_Albania_Demand_Albania
    var_type:
      LowerBound: -999999999.9
  Gen_001d01h01:
    name: Gen_001d01h01
    var_type: Free
  Gen_001d01h02:
    name: Gen_001d01h02
    var_type: Free
  Gen_001d01h03:
    name: Gen_001d01h03
    var_type: Free
  Gen_001d01h04:
    name: Gen_001d01h04
    var_type: Free
  Gen_001d01h05:
    name: Gen_001d01h05
    var_type: Free
  Gen_001d01h06:
    name: Gen_001d01h06
    var_type: Free
  Gen_001d01h07:
    name: Gen_001d01h07
    var_type: Free
  Gen_001d01h08:
    name: Gen_001d01h08
    var_type: Free
  Gen_001d01h09:
    name: Gen_001d01h09
    var_type: Free
  Gen_001d01h10:
    name: Gen_001d01h10
    var_type: Free
  Gen_001d01h11:
    name: Gen_001d01h11
    var_type: Free
  "SO_GB.XYZ's.Dan.(1)":
    name: "SO_GB.XYZ's.Dan.(1)"
    var_type: Free
  STU_7_AL.rsuT.Wat.Job.(1):
    name: STU_7_AL.rsuT.Wat.Job.(1)
    var_type: Free
